2008-03-22  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGrid.cs: Initialize the sorting button as pushed.

2008-03-22  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGrid.cs: 
	 - Visually select the PropertyTab.
	 - Filter Properties by Attributes properly.

2008-03-21  Jonathan Pobst  <monkey@jpobst.com>

	* MenuItem.cs: Remove menu item from parent when disposed.
	[Fixes bug #372845]

2008-03-21  Jonathan Pobst  <monkey@jpobst.com>

	* ToolBar.cs: Don't reset layout_type if Dock = None.

2008-03-21  Andreia Gaita <avidigal@novell.com> 

	* UserControl.cs: Select the first available control when we get focus.
	  Fixes #372616

2008-03-21  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs, DataGridViewTextBoxCell.cs: Don't paint
	the content if we are in edit mode.  [Fixes bug #343964]

2008-03-21  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Fix border painting for column headers.

2008-03-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: When setting or resetting data source,
	use ListBindingHelper.GetList () method, since it will get the list in
	case datasource is IListSource.

2008-03-20  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Implement lots more stuffs.

2008-03-20  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs, GridEntry.cs: Implement support for 
	UITypeEditor.IsDropDownResizable.

2008-03-20  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Remove unused variables, improve how
	several of the property getters work.
	* DataGridViewRow.cs: Don't call setSize on a cell, cell should
	get its size from the parent row/col.

2008-03-20  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGrid.cs: Ensure PropertiesTab is visible even if the 
	user alters manually the PropertyTabs collection via the 
	PropertyTabs property.

2008-03-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBindingHelper.cs: Implement -previously- ignored cases. We have